transate, footer, icons, fix inpt validation, lang button styling hover,

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -62,6 +62,7 @@
     "address": "العنوان",
     "city": "المدينة",
     "country": "الدولة",
+    "currency": "العملة",
     "website": "الموقع الإلكتروني",
     "language": "اللغة",
     "theme": "المظهر",
@@ -330,9 +331,16 @@
     "pendingReview": "قيد المراجعة",
     "jobUpdatedSuccessfully": "تم تحديث الوظيفة بنجاح!",
     "updateDetailsBelow": "حدّث التفاصيل أدناه لتعديل إعلان الوظيفة",
-    "failedToLoadJob": "فشل تحميل الوظيفة",
     "failedToLoadCompanies": "فشل تحميل شركاتك",
     "failedToUpdateJob": "فشل تحديث الوظيفة",
+    "jobCreatedSuccessfully": "تم إنشاء الوظيفة الجديدة بنجاح!",
+    "failedToPostJob": "فشل نشر الوظيفة",
+    "pleaseSelectCompany": "يرجى اختيار شركة",
+    "jobTitleRequired": "المسمى الوظيفي مطلوب",
+    "jobDescriptionRequired": "وصف الوضيفة مطلوب",
+    "cityRequired": "المدينة مطلوبة",
+    "employmentTypeRequired": "نوع التوظيف مطلوب",
+    "categoryRequired": "الفئة مطلوبة",
     "noCompanyProfileYet": "لا يوجد ملف شركة بعد",
     "needCompanyToPostJobs": "تحتاج إلى إنشاء ملف شركة قبل أن تتمكن من نشر الوظائف.",
     "address": "العنوان",
@@ -344,6 +352,14 @@
     "perMonth": "شهرياً",
     "perHour": "بالساعة",
     "featureThisJob": "إبراز هذه الوظيفة",
+    "activeVisibleToJobSeekers": "نشط (مرئي للباحثين عن عمل)",
+    "autoExpireIn30Days": "سينتهي إعلان الوظيفة تلقائياً خلال 30 يوماً",
+    "fillDetailsToCreateJob": "املأ التفاصيل أدناه لإنشاء إعلان وظيفة جديد",
+    "addSkillsHint": "أضف المهارات (اضغط Enter بعد كل مهارة)",
+    "additionalOptions": "خيارات إضافية",
+    "period": "الفترة",
+    "updateJob": "تحديث الوظيفة",
+    "postJobButton": "نشر الوظيفة",
     "enterFullName": "أدخل اسمك الكامل",
     "enterEmail": "your.email@example.com",
     "enterPhone": "+964 XXX XXX XXXX",
@@ -377,6 +393,7 @@
     "openPositions": "الوظائف المتاحة",
     "companyDetails": "تفاصيل الشركة",
     "createCompany": "إنشاء شركة",
+    "createYourCompany": "إنشاء شركتك",
     "editCompany": "تعديل الشركة",
     "updateYourCompanyInformation": "تحديث معلومات شركتك",
     "deleteCompany": "حذف الشركة",
@@ -408,6 +425,9 @@
     "pngJpgGifUpTo2MB": "PNG, JPG, GIF حتى 2 ميجابايت",
     "pngJpgGifUpTo2MBEach": "PNG, JPG, GIF حتى 2 ميجابايت لكل صورة",
     "updateYourCompanyInfo": "تحديث معلومات شركتك",
+    "companyUpdatedSuccessfully": "تم تحديث الشركة بنجاح!",
+    "failedToLoadCompany": "فشل تحميل تفاصيل الشركة",
+    "failedToUpdateCompany": "فشل تحديث الشركة",
     "noCompaniesFound": "لم يتم العثور على شركات",
     "searchCompanies": "ابحث عن شركات...",
     "tryAdjustingSearch": "حاول تعديل معايير البحث",
@@ -776,7 +796,7 @@
   },
   "home": {
     "heroTitle": "رحلتك المهنية تبدأ هنا",
-    "heroSubtitle": "اكتشف آلاف فرص العمل مع جميع المعلومات التي تحتاجها. تواصل مع أفضل الشركات حول العالم.",
+    "heroSubtitle": "اكتشف آلاف فرص العمل مع جميع المعلومات التي تحتاجها. تواصل مع أفضل الشركات في العراق.",
     "searchPlaceholder": "المسمى الوظيفي، الكلمات المفتاحية، أو الشركة",
     "locationPlaceholder": "المدينة",
     "searchButton": "ابحث عن وظائف",
@@ -909,6 +929,9 @@
   },
   "validation": {
     "required": "{field} مطلوب",
+    "fieldRequired": "يرجى ملء هذا الحقل",
+    "selectValidOption": "يرجى اختيار خيار صالح من القائمة",
+    "notFoundSelectValidOption": "غير موجود. يرجى كتابة خيار صالح من القائمة.",
     "email": "يرجى إدخال عنوان بريد إلكتروني صالح",
     "minLength": "يجب أن يكون {field} على الأقل {min} أحرف",
     "maxLength": "يجب ألا يتجاوز {field} {max} أحرف",
@@ -918,7 +941,8 @@
     "phone": "يرجى إدخال رقم هاتف صالح",
     "date": "يرجى إدخال تاريخ صالح",
     "min": "يجب أن يكون {field} على الأقل {min}",
-    "max": "يجب ألا يتجاوز {field} {max}"
+    "max": "يجب ألا يتجاوز {field} {max}",
+    "maxSalaryMustBeGreaterThanMin": "يجب أن يكون الحد الأقصى للراتب أكبر من أو يساوي الحد الأدنى"
   },
   "savedJobs": {
     "title": "الوظائف المحفوظة",
