--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -62,6 +62,7 @@
     "address": "Address",
     "city": "City",
     "country": "Country",
+    "currency": "Currency",
     "website": "Website",
     "language": "Language",
     "theme": "Theme",
@@ -337,6 +338,14 @@
     "failedToLoadJob": "Failed to load job",
     "failedToLoadCompanies": "Failed to load your companies",
     "failedToUpdateJob": "Failed to update job",
+    "jobCreatedSuccessfully": "New job created successfully!",
+    "failedToPostJob": "Failed to post job",
+    "pleaseSelectCompany": "Please select a company",
+    "jobTitleRequired": "Job title is required",
+    "jobDescriptionRequired": "Job description is required",
+    "cityRequired": "City is required",
+    "employmentTypeRequired": "Employment type is required",
+    "categoryRequired": "Category is required",
     "noCompanyProfileYet": "No Company Profile Yet",
     "needCompanyToPostJobs": "You need to create a company profile before you can post jobs.",
     "address": "Address",
@@ -348,6 +357,14 @@
     "perMonth": "Per Month",
     "perHour": "Per Hour",
     "featureThisJob": "Feature this job",
+    "activeVisibleToJobSeekers": "Active (visible to job seekers)",
+    "autoExpireIn30Days": "This job posting will automatically expire in 30 days",
+    "fillDetailsToCreateJob": "Fill out the details below to create a new job posting",
+    "addSkillsHint": "Add Skills (press Enter after each skill)",
+    "additionalOptions": "Additional Options",
+    "period": "Period",
+    "updateJob": "Update Job",
+    "postJobButton": "Post Job",
     "enterFullName": "Enter your full name",
     "enterEmail": "your.email@example.com",
     "enterPhone": "+1 (555) 000-0000",
@@ -377,6 +394,7 @@
     "openPositions": "Open Positions",
     "companyDetails": "Company Details",
     "createCompany": "Create Company",
+    "createYourCompany": "Create Your Company",
     "editCompany": "Edit Company",
     "updateYourCompanyInformation": "Update your company information",
     "deleteCompany": "Delete Company",
@@ -408,6 +426,9 @@
     "pngJpgGifUpTo2MB": "PNG, JPG, GIF up to 2MB",
     "pngJpgGifUpTo2MBEach": "PNG, JPG, GIF up to 2MB each",
     "updateYourCompanyInfo": "Update your company information",
+    "companyUpdatedSuccessfully": "Company updated successfully!",
+    "failedToLoadCompany": "Failed to load company details",
+    "failedToUpdateCompany": "Failed to update company",
     "noCompaniesFound": "No companies found",
     "searchCompanies": "Search companies...",
     "tryAdjustingSearch": "Try adjusting your search criteria",
@@ -775,7 +796,7 @@
   },
   "home": {
     "heroTitle": "Your Career Journey Starts Here",
-    "heroSubtitle": "Discover thousands of job opportunities with all the information you need. Connect with top companies worldwide.",
+    "heroSubtitle": "Discover thousands of job opportunities with all the information you need. Connect with top companies in Iraq.",
     "searchPlaceholder": "Job title, keywords, or company",
     "locationPlaceholder": "City",
     "searchButton": "Search Jobs",
@@ -908,6 +929,9 @@
   },
   "validation": {
     "required": "{field} is required",
+    "fieldRequired": "Please fill out this field",
+    "selectValidOption": "Please select a valid option from the list",
+    "notFoundSelectValidOption": "Not found. Please type a valid option from the list.",
     "email": "Please enter a valid email address",
     "minLength": "{field} must be at least {min} characters",
     "maxLength": "{field} must not exceed {max} characters",
@@ -917,7 +941,8 @@
     "phone": "Please enter a valid phone number",
     "date": "Please enter a valid date",
     "min": "{field} must be at least {min}",
-    "max": "{field} must not exceed {max}"
+    "max": "{field} must not exceed {max}",
+    "maxSalaryMustBeGreaterThanMin": "Maximum salary must be greater than or equal to minimum salary"
   },
   "savedJobs": {
     "title": "Saved Jobs",
