fix copilot issues

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -337,7 +337,8 @@
     "failedToPostJob": "فشل نشر الوظيفة",
     "pleaseSelectCompany": "يرجى اختيار شركة",
     "jobTitleRequired": "المسمى الوظيفي مطلوب",
-    "jobDescriptionRequired": "وصف الوضيفة مطلوب",
+    "jobDescriptionRequired": "وصف الوظيفة مطلوب",
+    "pleaseCheckYourInput": "يرجى التحقق من المدخلات والمحاولة مرة أخرى",
     "cityRequired": "المدينة مطلوبة",
     "employmentTypeRequired": "نوع التوظيف مطلوب",
     "categoryRequired": "الفئة مطلوبة",
