add contact form

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -28,6 +28,7 @@
     "share": "مشاركة",
     "copy": "نسخ",
     "copied": "تم النسخ!",
+    "at": "في",
     "error": "خطأ",
     "success": "نجح",
     "warning": "تحذير",
@@ -882,6 +883,7 @@
     "activeJobs": "الوظائف النشطة",
     "companies": "الشركات",
     "jobSeekers": "الباحثون عن عمل",
+    "applications": "التطبيقات",
     "satisfactionRate": "معدل الرضا",
     "ourTeam": "تعرف على فريقنا",
     "ourTeamSubtitle": "محترفون متحمسون مكرسون لنجاحك",
@@ -900,7 +902,24 @@
     "joinCommunity": "انضم إلى مجتمعنا",
     "joinCommunityText": "سواء كنت تبحث عن فرصتك التالية أو تبني فريق أحلامك، نحن هنا لمساعدتك على النجاح.",
     "getStarted": "ابدأ الآن",
-    "browseJobs": "تصفح الوظائف"
+    "browseJobs": "تصفح الوظائف",
+    "contactUs": "اتصل بنا",
+    "contactUsSubtitle": "هل لديك أسئلة؟ نحن نحب أن نسمع منك. أرسل لنا رسالة وسنرد في أقرب وقت ممكن.",
+    "getInTouch": "تواصل معنا",
+    "contactInfo": "معلومات الاتصال",
+    "phone": "الهاتف",
+    "phoneNumber": "+964 770 123 4567",
+    "email": "البريد الإلكتروني",
+    "supportEmail": "support@jobsiq.com",
+    "address": "العنوان",
+    "officeAddress": "بغداد، العراق",
+    "yourName": "اسمك",
+    "yourEmail": "بريدك الإلكتروني",
+    "subject": "الموضوع",
+    "message": "الرسالة",
+    "sendMessage": "إرسال الرسالة",
+    "messageSent": "تم إرسال الرسالة بنجاح! سنعود إليك قريباً.",
+    "messageError": "فشل إرسال الرسالة. يرجى المحاولة مرة أخرى."
   },
   "messages": {
     "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر؟",
