--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -28,6 +28,7 @@
     "share": "Share",
     "copy": "Copy",
     "copied": "Copied!",
+    "at": "at",
     "error": "Error",
     "success": "Success",
     "warning": "Warning",
@@ -882,6 +883,7 @@
     "activeJobs": "Active Jobs",
     "companies": "Companies",
     "jobSeekers": "Job Seekers",
+    "applications": "Applications",
     "satisfactionRate": "Satisfaction Rate",
     "ourTeam": "Meet Our Team",
     "ourTeamSubtitle": "Passionate professionals dedicated to your success",
@@ -900,7 +902,24 @@
     "joinCommunity": "Join Our Community",
     "joinCommunityText": "Whether you're looking for your next opportunity or building your dream team, we're here to help you succeed.",
     "getStarted": "Get Started",
-    "browseJobs": "Browse Jobs"
+    "browseJobs": "Browse Jobs",
+    "contactUs": "Contact Us",
+    "contactUsSubtitle": "Have questions? We'd love to hear from you. Send us a message and we'll respond as soon as possible.",
+    "getInTouch": "Get In Touch",
+    "contactInfo": "Contact Information",
+    "phone": "Phone",
+    "phoneNumber": "+964 770 123 4567",
+    "email": "Email",
+    "supportEmail": "support@jobsiq.com",
+    "address": "Address",
+    "officeAddress": "Baghdad, Iraq",
+    "yourName": "Your Name",
+    "yourEmail": "Your Email",
+    "subject": "Subject",
+    "message": "Message",
+    "sendMessage": "Send Message",
+    "messageSent": "Message sent successfully! We'll get back to you soon.",
+    "messageError": "Failed to send message. Please try again."
   },
   "messages": {
     "confirmDelete": "Are you sure you want to delete this item?",
