--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -568,6 +568,7 @@
     "beginner": "Beginner",
     "intermediate": "Intermediate",
     "advanced": "Advanced",
+    "fluent": "Fluent",
     "expert": "Expert",
     "native": "Native",
     "languageName": "Language",
@@ -575,8 +576,12 @@
     "issuingOrganization": "Issuing Organization",
     "issuer": "Issuer",
     "issueDate": "Issue Date",
+    "issued": "Issued",
     "expiryDate": "Expiry Date",
+    "expires": "Expires",
     "credentialId": "Credential ID",
+    "certificationUrl": "Certificate URL",
+    "viewCredential": "View Credential",
     "dateReceived": "Date Received",
     "awardTitle": "Award Title",
     "awarder": "Awarder",
@@ -591,6 +596,8 @@
     "referenceCompany": "Reference Company",
     "referenceEmail": "Reference Email",
     "referencePhone": "Reference Phone",
+    "relationship": "Relationship",
+    "relationshipPlaceholder": "Former Supervisor",
     "addItem": "Add Item",
     "addEducation": "Add Education",
     "addExperience": "Add Experience",
@@ -602,6 +609,8 @@
     "city": "City",
     "country": "Country",
     "postalCode": "Postal Code",
+    "streetAddress": "Street Address",
+    "streetAddressPlaceholder": "e.g., 77 Massachusetts Avenue",
     "isPublic": "Public",
     "isPrimary": "Primary",
     "website": "Website",
@@ -802,14 +811,6 @@
     "searchPlaceholder": "Job title, keywords, or company",
     "locationPlaceholder": "City",
     "searchButton": "Search Jobs",
-    "popular": "Popular:",
-    "popularSearches": {
-      "designer": "Designer",
-      "developer": "Developer",
-      "marketing": "Marketing",
-      "sales": "Sales",
-      "manager": "Manager"
-    },
     "howItWorks": "How It Works",
     "howItWorksSubtitle": "Get hired in 3 simple steps",
     "stepCreateTitle": "Create Account",
