--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -566,6 +566,8 @@
     "skillName": "Skill Name",
     "proficiencyLevel": "Proficiency Level",
     "beginner": "Beginner",
+    "basic": "Basic",
+    "conversational": "Conversational",
     "intermediate": "Intermediate",
     "advanced": "Advanced",
     "fluent": "Fluent",
