--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -683,6 +683,7 @@
     "myJobs": "وظائفي",
     "savedJobs": "الوظائف المحفوظة",
     "myApplications": "طلباتي",
+    "applications": "الطلبات",
     "browseFreeCvs": "تصفح السير الذاتية المجانية",
     "accountSettings": "إعدادات الحساب",
     "notifications": "الإشعارات",
@@ -697,6 +698,7 @@
     "manageCompanyProfile": "أدر شركتك وانشر وظائف",
     "createCompanyProfile": "أنشئ ملف شركتك",
     "viewManageJobs": "عرض وإدارة الوظائف المنشورة",
+    "reviewManageApplications": "مراجعة وإدارة طلبات التوظيف",
     "updatePersonalInfo": "تحديث معلوماتك الشخصية",
     "createManageResumes": "إنشاء وإدارة سيرك الذاتية",
     "viewBookmarkedJobs": "عرض الوظائف المحفوظة",
@@ -1040,5 +1042,49 @@
     "deleteSuccess": "تم حذف الوظيفة بنجاح",
     "deleteFailed": "فشل حذف الوظيفة",
     "jobNotFound": "لم يتم العثور على الوظيفة. ربما تم حذفها بالفعل."
+  },
+  "companyApplications": {
+    "title": "طلبات التوظيف",
+    "subtitle": "راجع وأدر الطلبات المقدمة لوظائفك",
+    "searchPlaceholder": "ابحث باسم المتقدم أو البريد الإلكتروني أو عنوان الوظيفة...",
+    "statusFilter": "الحالة",
+    "companyFilter": "الشركة",
+    "allStatus": "جميع الحالات",
+    "allCompanies": "جميع الشركات",
+    "pending": "قيد الانتظار",
+    "reviewed": "تمت المراجعة",
+    "accepted": "مقبول",
+    "rejected": "مرفوض",
+    "noApplications": "لا توجد طلبات بعد",
+    "noApplicationsMessage": "لم تستلم أي طلبات بعد.",
+    "noMatchingApplications": "لا توجد طلبات تطابق الفلاتر.",
+    "viewMyJobs": "عرض وظائفي",
+    "viewJob": "عرض الوظيفة",
+    "viewCV": "عرض السيرة الذاتية",
+    "updateStatus": "تحديث الحالة",
+    "updateApplicationStatus": "تحديث حالة الطلب",
+    "applicant": "المتقدم",
+    "status": "الحالة",
+    "applied": "تقدم",
+    "coverLetter": "خطاب التقديم",
+    "notes": "ملاحظات",
+    "notesLabel": "ملاحظات صاحب العمل",
+    "notesPlaceholder": "أضف ملاحظات داخلية حول هذا الطلب...",
+    "previous": "السابق",
+    "prev": "السابق",
+    "next": "التالي",
+    "cancel": "إلغاء",
+    "updating": "جاري التحديث...",
+    "updateSuccess": "تم تحديث حالة الطلب بنجاح",
+    "updateFailed": "فشل تحديث حالة الطلب",
+    "loadFailed": "فشل تحميل الطلبات",
+    "cvLoadFailed": "فشل تحميل السيرة الذاتية",
+    "backToApplications": "العودة إلى الطلبات",
+    "today": "اليوم",
+    "yesterday": "أمس",
+    "daysAgo": "منذ {count} أيام",
+    "weeksAgo": "منذ {count} أسابيع",
+    "monthsAgo": "منذ {count} أشهر",
+    "yearsAgo": "منذ {count} سنوات"
   }
 }
