--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -685,6 +685,7 @@
     "myJobs": "My Jobs",
     "savedJobs": "Saved Jobs",
     "myApplications": "My Applications",
+    "applications": "Applications",
     "browseFreeCvs": "Browse Free CVs",
     "accountSettings": "Account Settings",
     "notifications": "Notifications",
@@ -699,6 +700,7 @@
     "manageCompanyProfile": "Manage your company and post jobs",
     "createCompanyProfile": "Create your company profile",
     "viewManageJobs": "View and manage posted jobs",
+    "reviewManageApplications": "Review and manage job applications",
     "updatePersonalInfo": "Update your personal information",
     "createManageResumes": "Create and manage your resumes",
     "viewBookmarkedJobs": "View jobs you've bookmarked",
@@ -1041,5 +1043,50 @@
     "deleteSuccess": "Job deleted successfully",
     "deleteFailed": "Failed to delete job",
     "jobNotFound": "Job not found. It may have been already deleted."
+  },
+  "companyApplications": {
+    "title": "Job Applications",
+    "subtitle": "Review and manage applications for your job postings",
+    "searchPlaceholder": "Search by applicant name, email or job title...",
+    "statusFilter": "Status",
+    "companyFilter": "Company",
+    "allStatus": "All Status",
+    "allCompanies": "All Companies",
+    "pending": "Pending",
+    "reviewed": "Reviewed",
+    "accepted": "Accepted",
+    "rejected": "Rejected",
+    "noApplications": "No Applications Yet",
+    "noApplicationsMessage": "You haven't received any applications yet.",
+    "noMatchingApplications": "No applications match your filters.",
+    "viewMyJobs": "View My Jobs",
+    "viewJob": "View Job",
+    "viewCV": "View CV",
+    "updateStatus": "Update Status",
+    "updateApplicationStatus": "Update Application Status",
+    "applicant": "Applicant",
+    "status": "Status",
+    "applied": "Applied",
+    "reviewed": "Reviewed",
+    "coverLetter": "Cover Letter",
+    "notes": "Notes",
+    "notesLabel": "Employer Notes",
+    "notesPlaceholder": "Add internal notes about this application...",
+    "previous": "Previous",
+    "prev": "Prev",
+    "next": "Next",
+    "cancel": "Cancel",
+    "updating": "Updating...",
+    "updateSuccess": "Application status updated successfully",
+    "updateFailed": "Failed to update application status",
+    "loadFailed": "Failed to load applications",
+    "cvLoadFailed": "Failed to load CV",
+    "backToApplications": "Back to Applications",
+    "today": "today",
+    "yesterday": "yesterday",
+    "daysAgo": "{count} days ago",
+    "weeksAgo": "{count} weeks ago",
+    "monthsAgo": "{count} months ago",
+    "yearsAgo": "{count} years ago"
   }
 }
