fixes for frontend

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -203,9 +203,9 @@
     "confirmNewPasswordPlaceholder2": "أكد كلمة المرور الجديدة",
     "createStrongPassword": "أنشئ كلمة مرور قوية",
     "reenterPassword": "أعد إدخال كلمة المرور",
-    "emailPlaceholder": "john@example.com",
-    "companyEmailPlaceholder": "info@company.com",
-    "yourEmailPlaceholder": "john@company.com",
+    "emailPlaceholder": "john{'@'}example.com",
+    "companyEmailPlaceholder": "info{'@'}company.com",
+    "yourEmailPlaceholder": "john{'@'}company.com",
     "namePlaceholder": "أحمد محمد",
     "companyNamePlaceholder": "شركة أكمي",
     "passwordPlaceholder": "أدخل كلمة المرور",
@@ -363,7 +363,7 @@
     "updateJob": "تحديث الوظيفة",
     "postJobButton": "نشر الوظيفة",
     "enterFullName": "أدخل اسمك الكامل",
-    "enterEmail": "your.email@example.com",
+    "enterEmail": "your.email{'@'}example.com",
     "enterPhone": "+964 XXX XXX XXXX",
     "applyForPosition": "التقدم لهذا المنصب",
     "fullNameRequired": "الاسم الكامل *",
@@ -449,7 +449,7 @@
     "taglinePlaceholder": "شعار الشركة القصير",
     "tagline": "الشعار",
     "websitePlaceholder": "https://example.com",
-    "emailPlaceholder": "contact@company.com",
+    "emailPlaceholder": "contact{'@'}company.com",
     "phonePlaceholder": "+964 XXX XXX XXXX",
     "linkedinPlaceholder": "https://linkedin.com/company/...",
     "twitterPlaceholder": "https://twitter.com/...",
@@ -643,7 +643,7 @@
     "educationNumber": "التعليم #{number}",
     "fullNamePlaceholder": "أحمد محمد",
     "jobTitlePlaceholder": "مثل، مهندس برمجيات متقدم",
-    "emailPlaceholder": "ahmed.mohamed@example.com",
+    "emailPlaceholder": "ahmed.mohamed{'@'}example.com",
     "phonePlaceholder": "+964 XXX XXX XXXX",
     "cityPlaceholder": "بغداد",
     "skillsPlaceholder": "مثل، JavaScript, React, Node.js",
@@ -914,7 +914,7 @@
     "phone": "الهاتف",
     "phoneNumber": "+964 770 123 4567",
     "email": "البريد الإلكتروني",
-    "supportEmail": "support@jobsiq.com",
+    "supportEmail": "support{'@'}jobsiq.com",
     "address": "العنوان",
     "officeAddress": "بغداد، العراق",
     "yourName": "اسمك",
