--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -203,9 +203,9 @@
     "confirmNewPasswordPlaceholder2": "Confirm new password",
     "createStrongPassword": "Create a strong password",
     "reenterPassword": "Re-enter your password",
-    "emailPlaceholder": "john@example.com",
-    "companyEmailPlaceholder": "info@company.com",
-    "yourEmailPlaceholder": "john@company.com",
+    "emailPlaceholder": "john{'@'}example.com",
+    "companyEmailPlaceholder": "info{'@'}company.com",
+    "yourEmailPlaceholder": "john{'@'}company.com",
     "namePlaceholder": "John Doe",
     "companyNamePlaceholder": "Acme Corporation",
     "passwordPlaceholder": "Enter your password",
@@ -368,7 +368,7 @@
     "updateJob": "Update Job",
     "postJobButton": "Post Job",
     "enterFullName": "Enter your full name",
-    "enterEmail": "your.email@example.com",
+    "enterEmail": "your.email{'@'}example.com",
     "enterPhone": "+1 (555) 000-0000",
     "applyForPosition": "Apply for this position",
     "fullNameRequired": "Full Name *",
@@ -450,7 +450,7 @@
     "taglinePlaceholder": "Short company tagline",
     "tagline": "Tagline",
     "websitePlaceholder": "https://example.com",
-    "emailPlaceholder": "contact@company.com",
+    "emailPlaceholder": "contact{'@'}company.com",
     "phonePlaceholder": "+1 (555) 000-0000",
     "linkedinPlaceholder": "https://linkedin.com/company/...",
     "twitterPlaceholder": "https://twitter.com/...",
@@ -644,7 +644,7 @@
     "educationNumber": "Education #{number}",
     "fullNamePlaceholder": "John Doe",
     "jobTitlePlaceholder": "e.g., Senior Software Engineer",
-    "emailPlaceholder": "john.doe@example.com",
+    "emailPlaceholder": "john.doe{'@'}example.com",
     "phonePlaceholder": "+1 (555) 123-4567",
     "cityPlaceholder": "Baghdad",
     "skillsPlaceholder": "e.g., JavaScript, React, Node.js",
@@ -915,7 +915,7 @@
     "phone": "Phone",
     "phoneNumber": "+964 770 123 4567",
     "email": "Email",
-    "supportEmail": "support@jobsiq.com",
+    "supportEmail": "support{'@'}jobsiq.com",
     "address": "Address",
     "officeAddress": "Baghdad, Iraq",
     "yourName": "Your Name",
